INT: Criação do menu Hamburguer

--- a/CRUD/View/HomePage.xaml
+++ b/CRUD/View/HomePage.xaml
@@ -6,6 +6,7 @@
       xmlns:local="clr-namespace:CRUD.View"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
+      ShowsNavigationUI="False"
       Title="HomePage">
 
     <ListView ItemsSource="{Binding Clients}">
