WIP: Dependency Injection

--- a/CRUD/App.xaml
+++ b/CRUD/App.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CRUD"
              xmlns:converters="clr-namespace:CRUD.Converters"
-              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-             StartupUri="MainWindow.xaml">
+              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
     <Application.Resources>
         <ResourceDictionary>
             <converters:PhoneLabelConverter x:Key="PhoneLabelConverter"/>
