--- a/CRUD/View/NewClientPage.xaml
+++ b/CRUD/View/NewClientPage.xaml
@@ -5,6 +5,9 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CRUD.ViewModel"
       mc:Ignorable="d" 
+      xmlns:prism="http://prismlibrary.com/"
+      prism:ViewModelLocator.AutoWireViewModel="True"
+      ShowsNavigationUI="False"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="NewClientPage">
 
