--- a/CRUD/App.xaml
+++ b/CRUD/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CRUD"
              xmlns:converters="clr-namespace:CRUD.Converters"
-              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
     <Application.Resources>
         <ResourceDictionary>
             <converters:PhoneLabelConverter x:Key="PhoneLabelConverter"/>
@@ -11,6 +11,13 @@
             <!-- Close, minimize and maximize buttons -->
             <Style TargetType="{x:Type mah:WindowButtonCommands}"
                    BasedOn="{StaticResource MahApps.Metro.Styles.WindowButtonCommands.Win10}" />
+            
+            <!-- Transparent Buttons-->
+            <Style x:Key="ButtonStyle" TargetType="Button">
+                <Setter Property="Background" Value="Transparent"/>
+                <Setter Property="BorderThickness" Value="0"/>
+                <Setter Property="FontWeight" Value="DemiBold"/>
+            </Style>
             
             <!-- HamburguerMenu Side Icons-->
             <DataTemplate x:Key="MenuItemTemplate" DataType="{x:Type mah:HamburgerMenuIconItem}">
