--- a/CRUD/View/NewClientPage.xaml
+++ b/CRUD/View/NewClientPage.xaml
@@ -30,6 +30,7 @@
             <TextBox x:Name="AgeText" Text="{Binding Age, Mode=TwoWay}">
             </TextBox>
         </StackPanel>
-            <Button Content="Adicionar" Command="{Binding AddClientCommand}" Style="{StaticResource ButtonStyle}"/>
+        <Button Content="Adicionar" Command="{Binding AddClientCommand}" Style="{StaticResource ButtonStyle}"/>
+        <Label Content="Cadastrado com sucesso!" Foreground="Red" Visibility="{Binding Confirm, Converter={StaticResource LabelVisibilityConverter}}"/>
     </StackPanel>
 </Page>
